--- a/khata/package.json
+++ b/khata/package.json
@@ -5,6 +5,7 @@
   "main": "./out/main/index.js",
   "author": "example.com",
   "homepage": "https://electron-vite.org",
+  "type": "module",
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint --cache .",
@@ -20,8 +21,19 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
-    "@prisma/client": "^6.8.2",
-    "electron-updater": "^6.3.9"
+    "@prisma/client": "^6.9.0",
+    "bcryptjs": "^3.0.2",
+    "chart.js": "^4.4.9",
+    "electron-store": "^10.0.1",
+    "electron-updater": "^6.3.9",
+    "khata": "file:",
+    "lucide-react": "^0.511.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-router-dom": "^7.6.1",
+    "react-simple-keyboard": "^3.8.80",
+    "rechart": "^0.0.1",
+    "recharts": "^2.15.3",
+    "simple-keyboard": "^3.8.59"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^2.0.0",
@@ -35,7 +47,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "prettier": "^3.5.3",
-    "prisma": "^6.8.2",
+    "prisma": "^6.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "vite": "^6.2.6"
