--- a/khata/package.json
+++ b/khata/package.json
@@ -28,6 +28,7 @@
     "electron-updater": "^6.3.9",
     "khata": "file:",
     "lucide-react": "^0.511.0",
+    "node-fetch": "^3.3.2",
     "react-chartjs-2": "^5.3.0",
     "react-router-dom": "^7.6.1",
     "react-simple-keyboard": "^3.8.80",
